--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "vite.config.js",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist"
@@ -13,9 +13,6 @@
         "src": "/(.*)",
         "dest": "/index.html"
       }
-    ],
-    "env": {
-        "NODE_VERSION": "16.x"
-    }
+    ]
   }
   
